# portfolio

./: README.md
cpp/BellmanFord/: BellmanFord  BellmanFord.H  Edge.H  Graph.H  Node.H  main.cpp  makefile
cpp/LWLS/: LWLS.hpp  main.cpp  makefile  solver
cpp/OpenCVTutorials/0.Basics/0.Tutorial_AcessCamera/: CMakeLists.txt  main.cpp
cpp/OpenCVTutorials/0.Basics/1.Tutorial_BasicMatContainer/: CMakeLists.txt  main.cpp
cpp/OpenCVTutorials/0.Basics/2.Tutorial_ScanningImage/: CMakeLists.txt  main.cpp
cpp/OpenCVTutorials/0.Basics/3.Tutorial_MaskOperations/: CMakeLists.txt  main.cpp
cpp/OpenCVTutorials/0.Basics/4.Tutorial_Blending/: CMakeLists.txt  main.cpp
cpp/fvEllipticSolver/: README.md
cpp/fvEllipticSolver/RMZ_CFD/: CMakeLists.txt
cpp/fvEllipticSolver/RMZ_CFD/app/: CMakeLists.txt
cpp/fvEllipticSolver/RMZ_CFD/app/laplacian/: CMakeLists.txt  main.cpp
cpp/fvEllipticSolver/RMZ_CFD/app/sdf/: CMakeLists.txt  main.cpp
cpp/fvEllipticSolver/RMZ_CFD/src/: CMakeLists.txt
cpp/fvEllipticSolver/RMZ_CFD/src/IO/: CMakeLists.txt  boundary_xyz_values_reader.cpp  boundary_xyz_values_reader.hpp  export_gmsh.cpp  export_gmsh.hpp  gmsh_reader.cpp  gmsh_reader.hpp  mesh_writer.cpp  mesh_writer.hpp  points_list_reader.cpp  points_list_reader.hpp  stl_reader.cpp  stl_reader.hpp  streiter_stl_reader.h  table_reader.cpp  table_reader.hpp  vtk_writer.cpp  vtk_writer.hpp
cpp/fvEllipticSolver/RMZ_CFD/src/boundary_conditions/: CMakeLists.txt  robin_BC.cpp  robin_BC.hpp
cpp/fvEllipticSolver/RMZ_CFD/src/discretization/: CMakeLists.txt
cpp/fvEllipticSolver/RMZ_CFD/src/discretization/cell_face_interpolation/: CMakeLists.txt  cell_face_interpolation.cpp  cell_face_interpolation.hpp
cpp/fvEllipticSolver/RMZ_CFD/src/discretization/cell_node_interpolation/: CMakeLists.txt  cell_node_interpolation.cpp  cell_node_interpolation.hpp
cpp/fvEllipticSolver/RMZ_CFD/src/discretization/divergence/: CMakeLists.txt  divergence.cpp  divergence.hpp
cpp/fvEllipticSolver/RMZ_CFD/src/discretization/gradient/: CMakeLists.txt  gradient.cpp  gradient.hpp
cpp/fvEllipticSolver/RMZ_CFD/src/discretization/laplacian/: CMakeLists.txt  laplacian.cpp  laplacian.hpp
cpp/fvEllipticSolver/RMZ_CFD/src/discretization/node_cell_interpolation/: CMakeLists.txt  node_cell_interpolation.cpp  node_cell_interpolation.hpp
cpp/fvEllipticSolver/RMZ_CFD/src/discretization/time/: CMakeLists.txt  dt_euler.cpp  dt_euler.hpp
cpp/fvEllipticSolver/RMZ_CFD/src/elements/: CMakeLists.txt  cell.cpp  cell.hpp  cell_model.cpp  cell_model.hpp  edge.cpp  edge.hpp  face.cpp  face.hpp  node.cpp  node.hpp
cpp/fvEllipticSolver/RMZ_CFD/src/fields/: CMakeLists.txt  cell_field.cpp  cell_field.hpp  cell_vector_field.cpp  cell_vector_field.hpp  face_field.cpp  face_field.hpp  face_vector_field.cpp  face_vector_field.hpp  node_field.cpp  node_field.hpp
cpp/fvEllipticSolver/RMZ_CFD/src/geom/: CMakeLists.txt  point.cpp  point.hpp
cpp/fvEllipticSolver/RMZ_CFD/src/mesh/: CMakeLists.txt  conforming_finite_volume_mesh.cpp  conforming_finite_volume_mesh.hpp  mesh.cpp  mesh.hpp
cpp/fvEllipticSolver/RMZ_CFD/src/tools/: CMakeLists.txt  buckets_search.cpp  buckets_search.hpp  coordinates_system_conversions.cpp  coordinates_system_conversions.hpp  geom_tools.cpp  geom_tools.hpp  kd_tree.h  vector_operators_overloaded.cpp  vector_operators_overloaded.hpp
cpp/sound_reader/: sound_analysis  sound_analysis.cpp
full_website/boxes/: app.py
full_website/boxes/templates/: index.html
full_website/simple_store/: app.py
full_website/simple_store/instance/: products.db  site.db  users_site.db
full_website/simple_store/products_db/: ProductsDataBase.py  ProductsDataBaseHandler.py
full_website/simple_store/static/: signpages_styles.css  styles.css
full_website/simple_store/templates/: cart.html  index.html  product.html  signin.html  signup.html
instance/: site.db
python_portoflio/BST/: BST.py  BST_Test.py
python_portoflio/octree/: octree.py
sqlAlchemy_portofolio/products_db/: app.py  products.db
