set (SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set (TOOLS_DIR ${SRC_DIR}/tools)
set (GEOM_DIR ${SRC_DIR}/geom)
set (ELEMENTS_DIR ${SRC_DIR}/elements)
set (BC_DIR ${SRC_DIR}/boundary_conditions)
set (DISCRETIZATION_DIR ${SRC_DIR}/discretization)
set (FIELDS_DIR ${SRC_DIR}/fields)
set (IO_DIR ${SRC_DIR}/IO)
set (MESH_DIR ${SRC_DIR}/mesh)
set (MESHER_DIR ${SRC_DIR}/mesher)
set (APP_DIR ${CMAKE_CURRENT_SOURCE_DIR}/app)

add_subdirectory (${SRC_DIR})
add_subdirectory (${APP_DIR})
