set(CELL_FACE_INTERPOLATION_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/cell_face_interpolation)
set(CELL_NODE_INTERPOLATION_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/cell_node_interpolation)
set(NODE_CELL_INTERPOLATION_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/node_cell_interpolation)
set(DIV_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/divergence)
set(GRAD_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/gradient)
set(LAPLACIAN_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/laplacian)
set(TIME_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/time)
add_subdirectory(${CELL_FACE_INTERPOLATION_DIR})
add_subdirectory(${CELL_NODE_INTERPOLATION_DIR})
add_subdirectory(${NODE_CELL_INTERPOLATION_DIR})
add_subdirectory(${DIV_DIR})
add_subdirectory(${GRAD_DIR})
add_subdirectory(${LAPLACIAN_DIR})
add_subdirectory(${TIME_DIR})